k8s/mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: aihr
spec:
  clusterIP: None
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: aihr
spec:
  serviceName: mariadb
  replicas: 1

  selector:
    matchLabels:
      app: mariadb

  template:
    metadata:
      labels:
        app: mariadb

    spec:
      containers:
        - name: mariadb
          image: mariadb:11.8
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql

  volumeClaimTemplates:
    - metadata:
        name: mariadb-data

      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: longhorn-2replica

        resources:
          requests:
            storage: 30Gi
